# early-bird-train

./: .dockerignore  .env.example  .gitignore  AWS_DEPLOY.md  CI_CD.md  ENV_UPDATE.md  LOCAL_DOCKER_TEST.md  Makefile  QUICKSTART.md  README.md  TODO.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
src/: __init__.py  container.py
src/application/: ticket_service.py
src/config/: settings.py
src/domain/: __init__.py  exceptions.py  interfaces.py  models.py
src/infrastructure/: __init__.py  analyzer.py  crawler.py  notifier.py  scheduler.py
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py
tests/fixtures/: mock_data.py
tests/unit/: test_analyzer.py  test_container.py  test_crawler.py  test_notifier.py  test_scheduler.py  test_settings.py  test_ticket_service.py
